--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= javascript_pack_tag 'application' %>
-  
+    <%= stylesheet_pack_tag 'app' %>
   </head>
 
   <body>
