--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <% if user_signed_in? %>
+        <%= link_to "My Prezes", user_path(current_user), class: "nav-link" %>
+          <%= link_to(edit_user_registration_path, :class => "nav-link") do %>
+            Yo
+          <% end %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
+        <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
+      <% end %>
     <%= yield %>
   </body>
 </html>
