--- a/frontend/packs/app.css
+++ b/frontend/packs/app.css
@@ -1,3 +1,11 @@
+:root {
+  --background-color: rgb(80, 66, 66);
+  --text-color: rgb(247, 216, 216);
+  --font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 body {
-  background:red;
+  background: var(--background-color);
+  color: var(--text-color);
+  font-family: var(--font-family-base);
 }
