--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,11 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <%= link_to "Stinkylinks", root_url %>
     <% if user_signed_in? %>
-        <%= link_to(edit_user_registration_path, :class => "nav-link") do %>
-          Yo
-        <% end %>
+      <%= link_to(edit_user_registration_path, :class => "nav-link") do %>
+        Yo
+      <% end %>
       <% else %>
         <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
         <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
