Some styling and whitelist params

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,5 @@
-<%= @users.each do |user| %>
+<h1 class="text-jumbo">Stinkers!</h1>
+
+<% @users.each do |user| %>
+  <%= user.nick_name %>
 <% end %>
