--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,26 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="notice"><%= notice %></div>
+    <div class="alert"><%= alert %></div>
 
-    <%= link_to "Stinkylinks", root_url %>
-    <% if user_signed_in? %>
-      <%= link_to(edit_user_registration_path, :class => "nav-link") do %>
-        Yo
-      <% end %>
-      <% else %>
-        <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
-        <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
-      <% end %>
-    <%= yield %>
+    <div class="stinky-wrapper">
+
+      <div class="stinky-nav">
+        <%= link_to "Stinkylinks", root_url %>
+        <% if user_signed_in? %>
+          <%= link_to "Edit profile", edit_user_registration_path %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
+          <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
+        <% end %>
+      </div>
+
+      <div class="stinky-main">
+        <%= yield %>
+      </div>
+
+    </div>
   </body>
 </html>
