Likes for links

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -5,5 +5,8 @@
   <% if user_signed_in? && current_user.id == link.user_id %>
   <%= link_to 'Edit', edit_link_path(link) %>
   <% end %>
+  <div class="<%= dom_id(link) %>-likes">
+    <%= render partial: "links/likes", locals: { link: link } %>
+  </div>
 </div>
 </div>
