--- a/app/views/links/_likes.html.erb
+++ b/app/views/links/_likes.html.erb
@@ -1,13 +1,13 @@
 <% if user_signed_in? && current_user.likes?(link)%>
-  <%= link_to "Unlike", link_like_path(link), method: :delete, remote: true %>
+  <%= link_to "Unstink", link_like_path(link), method: :delete, remote: true %>
 <% elsif user_signed_in? %>
-  <%= link_to "like", link_like_path(link), method: :post, remote: true %>
+  <%= link_to "Stink", link_like_path(link), method: :post, remote: true %>
 <% else %>
-  <%= link_to "like", link_like_path(link), method: :post %>
+  <%= link_to "Stink", link_like_path(link), method: :post %>
 <% end %>
 
 <%= link.likes.count %>
 
 <% link.likes.each do |like| %>
-  <%= like.user.nick_name %>
+  <%= like.user.avatar_default %>
 <% end %>
