--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,25 +10,34 @@
   </head>
 
   <body>
-    <div class="notice"><%= notice %></div>
-    <div class="alert"><%= alert %></div>
+    <% if notice.present? %>
+      <div class="alert --info"><%= notice %></div>
+    <% end %>
+    <% if alert.present? %>
+      <div class="alert --warning"><%= alert %></div>
+    <% end %>
 
-    <div class="stinky-wrapper">
+    <div class="wrapper">
 
-      <div class="stinky-nav">
-        <%= link_to "Stinkylinks", root_url %>
+      <div class="nav">
+
+        <div class="nav-logo">
+          <%= link_to "Stinkylinks", root_url %>
+        </div>
         
-        <%= link_to 'New Link', new_link_path %>
-        <% if user_signed_in? %>
-          <%= link_to "Edit profile", edit_user_registration_path %>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-        <% else %>
-          <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
-          <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
-        <% end %>
+        <div class="nav-actions">
+          <%= link_to 'New Link', new_link_path %>
+          <% if user_signed_in? %>
+            <%= link_to "Edit profile", edit_user_registration_path %>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
+            <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
+          <% end %>
+        </div>
       </div>
 
-      <div class="stinky-main">
+      <div class="main">
         <%= yield %>
       </div>
 
