--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Links</h1>
+<h1>Hello!</h1>
+<p>Design work in progress</p>
+<%= link_to 'Add Stink', new_link_path, class: "button button--default" %>
 
 <%= render @links %>
 
