--- a/frontend/packs/links.css
+++ b/frontend/packs/links.css
@@ -1,13 +1,16 @@
 .link {
   margin: 0 0 calc(var(--spacing) * 2) 0;
+  padding: calc(var(--spacing) * 2) 0;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .link-meta {
   display: flex;
+  justify-content: space-between;
 }
 
-.--link {
-  font-size: 2rem;
+.link--default {
+  font-size: 1.5rem;
   display: block;
   margin: 0 0 var(--spacing) 0;
 }
