--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,15 @@
 
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'app' %>
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,700" rel="stylesheet">
   </head>
 
   <body>
     <% if notice.present? %>
-      <div class="alert --info"><%= notice %></div>
+      <div class="alert alert--info"><%= notice %></div>
     <% end %>
     <% if alert.present? %>
-      <div class="alert --warning"><%= alert %></div>
+      <div class="alert alert--warning"><%= alert %></div>
     <% end %>
 
     <div class="wrapper">
@@ -26,13 +27,21 @@
         </div>
         
         <div class="nav-actions">
-          <%= link_to 'New Link', new_link_path %>
           <% if user_signed_in? %>
-            <%= link_to "Edit profile", edit_user_registration_path %>
-            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
+          <%= link_to(edit_user_registration_path, class: "button") do %>
+            <% if Current.user.avatar.attached? %>
+              <%= image_tag current_user.avatar.variant(resize: "20x20"), class: "user-avatar" %>
+            <% else %>
+              <%= image_tag current_user.avatar_url, width: 20 %>
+            <% end %>
+            <%= Current.user.nick_name %>
+          <% end %>
+
+            <%= link_to "Logout", destroy_user_session_path, class: "button", method: :delete %>
           <% else %>
-            <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
-            <%= link_to "Login", new_user_session_path, :class => 'nav-link' %>
+            <%= link_to "Sign up", new_user_registration_path %>
+            <%= link_to "Login", new_user_session_path %>
           <% end %>
         </div>
       </div>
