--- a/frontend/packs/app.css
+++ b/frontend/packs/app.css
@@ -1,13 +1,14 @@
 @import "forms";
 @import "alerts";
 @import "links";
+@import "button";
 
 :root {
   --background-color: #fff;
   --background-color-shade: #f8f8f8;
   --text-color: #444;
   --link-color: royalblue;
-  --font-family-base: courier new;
+  --font-family-base: 'Work Sans', sans-serif;
 
   --spacing: 8px;
   --border-color: #f1f1f1;
@@ -29,7 +30,7 @@ body {
 }
 
 h1, h2, h3 {
-  font-weight: 300;
+  font-weight: 700;
 }
 
 a {
@@ -43,6 +44,7 @@ a {
 
 .wrapper {
   max-width: 60rem;
+  padding: calc(var(--spacing) * 2);
   margin: 0 auto;
 }
 
@@ -51,6 +53,24 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.nav-logo {
+  & a {
+    color: #333;
+    font-size: 3rem;
+    font-weight: 700;
+  }
+
+}
+
+.nav-actions {
+  display: flex;
+  align-items: center;
+}
+
+.user-avatar {
+  margin-right: 10px;
 }
 
 .main {
