--- a/frontend/packs/forms.css
+++ b/frontend/packs/forms.css
@@ -2,6 +2,10 @@
   margin: 0 0 calc(var(--spacing) * 2) 0;
 }
 
+label {
+  font-weight: 500;
+}
+
 .form-control {
   -webkit-appearance: none;
   background: none;
