Viewport and styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Stinkylinks</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'app' %>
@@ -18,31 +19,43 @@
       <div class="alert alert--warning"><%= alert %></div>
     <% end %>
 
-    <div class="wrapper">
+      <div class="site-header">
 
-      <div class="nav">
+        <div class="container">
 
-        <div class="nav-logo">
-          <%= link_to "Stinkylinks", root_url %>
-        </div>
-        
-        <div class="nav-actions">
-          <% if user_signed_in? %>
+          <nav class="nav">
 
-          <%= link_to(edit_user_registration_path, class: "button") do %>
+            <div class="nav-logo">
+              <%= link_to "Stinkylinks", root_url %>
+            </div>
             
-            <%= Current.user.nick_name %>
-          <% end %>
+            <div class="nav-actions">
 
-            <%= link_to "Logout", destroy_user_session_path, class: "button", method: :delete %>
-          <% else %>
-            <%= link_to "Sign up", new_user_registration_path %>
-            <%= link_to "Login", new_user_session_path %>
-          <% end %>
+              <% if user_signed_in? %>
+
+              <%= link_to(edit_user_registration_path, class: "button") do %>
+                <% if Current.user.avatar.attached? %>
+                  <%= image_tag current_user.avatar.variant(resize: "20x20"), class: "user-avatar" %>
+                <% end %>
+                <%= Current.user.nick_name %>
+              <% end %>
+
+              <%= link_to "Logout", destroy_user_session_path, class: "button", method: :delete %>
+              
+              <% else %>
+                <%= link_to "Login", new_user_session_path, class: "button" %>
+                <%= link_to "Sign up", new_user_registration_path, class: "button button--default" %>
+              <% end %>
+
+            </div>
+
+          </nav>
+          
         </div>
+
       </div>
 
-      <div class="main">
+      <div class="container">
         <%= yield %>
       </div>
 
