--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -1,15 +1,19 @@
 <div class="link">
-<a class="link--default" href="<%= link.url %>" target="_blank"><%= link.title %></a>
-<div class="link-meta">
-  <div>
-    <div class="<%= dom_id(link) %>-likes">
-      <%= render partial: "links/likes", locals: { link: link } %>
-    </div>
-    <%= link.user.nick_name %>
+  
+  <div class="<%= dom_id(link) %>-likes">
+    <%= render partial: "links/likes", locals: { link: link } %>
   </div>
-  <% if user_signed_in? && current_user.id == link.user_id %>
-  <%= link_to 'Edit', edit_link_path(link) %>
-  <% end %>
+  
+  <a class="link--default" href="<%= link.url %>" target="_blank"><%= link.title %></a>
+  
+  <div class="link-meta">
+      
+    <div class="flex">
+      <%= link.user.nick_name %>
+      <% if user_signed_in? && current_user.id == link.user_id %>
+        <%= link_to 'Edit', edit_link_path(link) %>
+      <% end %>
+    </div>
 
-</div>
+  </div>
 </div>
